karl/views/static/themedstyles.css
/* ... */
ul.nav li:hover ul a,
ul.nav li.iehover ul a {
  background-color: transparent;
}
ul.nav li:hover ul a:hover,
ul.nav li.iehover ul a:hover {
  background-color: #cccccc !important;
}

/** =PORTLET
----------------------------------------------- */
.portlet-table {
  border-collapse: collapse;
  padding: 0;
  margin: 0% 5%;
  width: 90%;
}
.portlet-table td {
  border-collapse: collapse;
  padding: 0 2px 10px;
  margin: 0;
  vertical-align: top;
}
.portlet-table td.type {
    text-align: center;
}
.portlet-table td.date {
    text-align: right;
}
.portlet-table .num {
	width: 10%;
	padding-right: 10px;
	text-align: right;
}
.portlet-table .name,
.portlet-table .type{
	padding-right: 2px;
}
a.splitIntoWords span {
	display: block;
}

/** =OFFICES
----------------------------------------------- */
div#offices-wrapper {
  padding:0 215px;
  font-size: 0.8em;
}
ul#offices-listing {
  margin: 0;
  padding:0;
  list-style: none;
}
ul#offices-listing li {
  margin: 0;
  padding: 0;
  list-style:none;
  text-transform: uppercase;
  display: inline;
  white-space:nowrap;
}
span.officeslistSeparator {
  padding: 0 0.2em 0 0.2em;
}
div#offices-wrapper p {
  padding: 0;
  margin: 0.5em 0;
}

/** =WICKED
----------------------------------------------- */
.wicked_resolved img {
  border: none;
}
.wicked_unresolved {
  color: red;
}

/** edit page (form) view **/
.field {
  left: 0;
  top: 0;
  margin: 1em 1em 1.5em 0;
}
.field label.required {
  background-repeat: no-repeat;
  background-position: right center;
  padding-right: 8px;
}
input#title {
  font-family:Tahoma,"Lucida Grande",Lucida,Helvetica,Arial,sans-serif;
  font-size:160%;
  font-weight:normal;
}
div.error {
  background-color: #FFCC00;
  border: 1px solid #FF8A00;
  margin: 0pt 0pt 1em;
  padding: 1em;
  width: 49em;
}
.error .fieldRequired {
  color: #FFCC00;
}

#mce_editor_0_addwickedlink,
#mce_editor_0_delwickedlink,
#mce_editor_1_addwickedlink,
#mce_editor_1_delwickedlink,
#mce_editor_2_addwickedlink,
#mce_editor_2_delwickedlink,
#mce_editor_3_addwickedlink,
#mce_editor_3_delwickedlink,
#mce_editor_4_addwickedlink,
#mce_editor_4_delwickedlink {
  display: none;
}

/** =BLOG ENTRY
----------------------------------------------- */
.addCommentButton {
  text-align: center;
  padding: 0.4em 0em;
  text-transform: capitalize;
}
.newsitemImage {
  float: right;
  margin: 0 0 1em 1em;
}
.imageCaption {
  margin-top: 0.5em;
  width: 200px;
}
.kbyline {
  color: #999999;
}
.kbody {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}
.blogComment {
  background: #F0F2F4;
  border: 1px solid #CECECE;
  margin: 0em 0em 1em;
  padding: 1em;
  min-height: 100px;
  height:auto !important;
  height: 100px;
}
.blogAttachments {
  margin: 1em 0em 2em 0em;
}
.blogAttachments span {
  margin-right: 1em;
}
.commentManagement {
  float: right;
  margin-top: -0.5em;
}
.blogEntry {
  border-top: 1px solid #CECECE;
  padding-bottom: 1.5em;
}
.blogEntry h2 {
  margin-bottom: 0;
  margin-top: 0.5em;
}
.blogEntry h2 a {
  text-decoration: none;
}
.commentText {
  margin-top: 2em;
  margin-bottom: 2em;
}
.batchNavigation {
  margin-top: 2em;
}

/** =BATCH MECHANISM
----------------------------------------------- */
.kpagination_frame {
  background-color: #F0F2F4;
  border: 1px solid #cecece;
  color: black;
  padding: 0.2em 1em;
  margin-top: 1em;
  margin-bottom: 1em;
}

/** =CALENDAR
----------------------------------------------- */
.kutility_menu {
  margin-bottom: 20px;
}
.kutility_menu a {
  color: black;
}
h2.eventsListing {
  text-align: center;
}
dl.eventsListing dt {
  font-weight: bold;
  margin-top: 15px
}
dl.eventsListing dd {
  margin: 1px 0;
  padding: 0.5em;
  background-color: #EFF7FF;
}
.batchNavigation {
	text-align: center;
	margin-bottom: 0.5em;
}
.batchNavigation a {
  font-weight: bold;
}
.batchNavigation a:hover {
  text-decoration: none;
}
table#calendar {
  border: 1px solid #D9D9D9;
  border-style: solid solid none none;
}
table#calendar td {
  border: solid #D9D9D9 .5px;
}
table#calendar td.this-day {
  background-color:#fff6e4;
}
table#calendar td.other-month,
table#calendar td.this-month {
  background: white;
}
table#calendar span.middot {
  font-weight: bold;
  font-size: 160%;
  vertical-align: middle;
  font-family: "Trebuchet MS";
  line-height: 0.6em;
}
.calendar_day_of_week_header {
  text-align: center;
  background-color: #e5e8ed;
}
.calendar_day_of_week_header td {
  padding: 4px 0 4px 0;
  border: solid #D9D9D9;
  border-width: 1px 0 1px 1px;
}
.calendar_day_header {
  text-align: right;
  background-color: #E8EEF7;
  display: block;
}
.other-month .calendar_day_header {
  text-align: right;
  background-color: #E8EEF7;
  color: #D9D9D9;
}
.calendar_day_entry {
  padding: 3px;
  color: #999;
}

/** =PEOPLE PROFILE
----------------------------------------------- */
.peopleSearchWrapper {
  border: 1px solid #CECECE;
  border-top: none;
  padding: 2em 10px 1em;
}
.peopleSearchWrapper .kalphabetlisting {
  margin-bottom: 0 !important;
  background: #F0F2F4;
  border: 1px solid #CECECE;
  padding: 0.1em 0.5em;
  font-size: 0.9em;
  color: #CECECE;
}
.peopleSearchWrapper .kalphabetlisting strong {
  color: #666666;
}
div.search_utility_bar {
  margin-bottom: 2em;
  border: 1px solid #CECECE;
  border-top: none;
  padding: 0em 1em;
}
.profilesWrapper {
  clear: right;
  padding-top: 1em;
  margin: 0;
  height: 1%;
}
.photoProfile {
  height: 127px;
  background-color: #F5ECCF;
  padding: 0;
  width: 32%;
  margin: 0 0.5% 0.5% 0;
  font-size: 0.9em;
  float: left;
  display: inline;
  overflow: hidden;
}
.photoProfile img {
  font-size: 1em;
}
.photoProfile h4 {
  margin: 10px 10px 0;
  font-weight: normal;
  font-size: 1em;
}
.photoProfile p {
  line-height: 1.5em;
  margin: 0.5em 10px 10px;
}
.photoProfile p span {
  display: block;
}
.photoProfileImage {
  float: left;
  display: inline;
  margin: 10px;
}
.photoProfileImage img {
  border: none;
  height: 100px;
  width: 75px;
  -ms-interpolation-mode: bicubic; /* ie 7 */
}
/* ... */

